--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
 }
 
 html, body, #root {
-  height: 100%;
-  height: 100dvh;
-  overflow: hidden;
+  min-height: 100%;
+  min-height: 100dvh;
 }
